Add Doxygen documentation to public API Renamed some structures to make the API easier to understand

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,11 @@
-SUBDIRS = src
+SUBDIRS = src tools
+
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = dsmcc.pc
 
-SUBDIRS += tools
+# Documentation 
+
+.PHONY: doc
+
+doc: $(top_srcdir)/include/dsmcc/dsmcc.h
+	doxygen Doxyfile
