Use libtool to build shared library

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,12 +1,18 @@
-dsmcclibdir = $(libdir)
-libdsmcc_sodir = $(includedir)/dsmcc
-dsmcclib_PROGRAMS = libdsmcc.so
-libdsmcc_so_LDFLAGS = -shared -Wl,--version-script,libdsmcc.map
-AM_CFLAGS = \
-	-fPIC \
-	-I$(top_srcdir)/include \
-	-I$(top_srcdir)/src
-
+lib_LTLIBRARIES = libdsmcc.la
+libdsmcc_la_SOURCES = \
+	dsmcc-biop-ior.c \
+	dsmcc-biop-tap.c \
+	dsmcc-descriptor.c \
+	dsmcc-ts.c \
+	dsmcc-cache-module.c \
+	dsmcc-debug.c \
+	dsmcc.c \
+	dsmcc-biop-message.c \
+	dsmcc-biop-module.c \
+	dsmcc-section.c \
+	dsmcc-util.c \
+	dsmcc-cache-file.c \
+	dsmcc-carousel.c
 noinst_HEADERS = \
 	dsmcc-biop-ior.h \
 	dsmcc-biop-message.h \
@@ -21,21 +27,9 @@ noinst_HEADERS = \
 	dsmcc-section.h \
 	dsmcc-ts.h \
 	dsmcc-util.h
-
-libdsmcc_so_HEADERS = \
+include_HEADERS = \
 	../include/dsmcc/dsmcc.h
 
-libdsmcc_so_SOURCES = \
-	dsmcc-biop-ior.c \
-	dsmcc-biop-tap.c \
-	dsmcc-descriptor.c \
-	dsmcc-ts.c \
-	dsmcc-cache-module.c \
-	dsmcc-debug.c \
-	dsmcc.c \
-	dsmcc-biop-message.c \
-	dsmcc-biop-module.c \
-	dsmcc-section.c \
-	dsmcc-util.c \
-	dsmcc-cache-file.c \
-	dsmcc-carousel.c
+AM_CFLAGS = \
+	-I$(top_srcdir)/include \
+	-I$(top_srcdir)/src
