--- a/configure.ac
+++ b/configure.ac
@@ -11,8 +11,7 @@ AC_CONFIG_SRCDIR([src],[tools])
 # Checks for programs.
 AC_PROG_CC
 AM_PROG_CC_C_O
-AC_PROG_RANLIB
-AC_PROG_INSTALL
+AM_PROG_LIBTOOL
 
 # Checks for libraries.
 
