--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -1,6 +1,5 @@
 bin_PROGRAMS = dsmcc_reader
 
-LDADD = -L$(top_builddir)/src/ -ldsmcc
-
 dsmcc_reader_SOURCES = dsmcc-reader.c
 dsmcc_reader_CFLAGS = -I$(top_srcdir)/include -I$(top_builddir)/include
+dsmcc_reader_LDADD = ../src/libdsmcc.la
