--- a/configure.ac
+++ b/configure.ac
@@ -4,7 +4,7 @@
 AC_PREREQ(2.60)
 AC_INIT([dsmcc], [2.0.0], [dev@wyplay.com])
 AM_INIT_AUTOMAKE
-AC_CONFIG_SRCDIR([src],[tools])
+AC_CONFIG_SRCDIR([src/dsmcc.c])
 AC_CONFIG_HEADERS([src/dsmcc-config.h])
 
 # Checks for programs.
@@ -21,35 +21,13 @@ AC_CHECK_HEADERS([stdbool.h])
 
 # Checks for library functions.
 
-######## More user friendly AC_ARG_WITH macro ########
-# $1: label   $2: var name  $3: default value   4: help string
-AC_DEFUN([MY_ARG_WITH],
-            [AC_ARG_WITH([$1],
-               [AS_HELP_STRING([--with-$1(=ARG)], [$4 (default is $3)])],
-               [AC_DEFINE_UNQUOTED($2, "$withval", $4)] $2=$withval,
-               [AC_DEFINE_UNQUOTED($2, "$3", $4)] $2=$3
-                        )
-            ]
-        )
-
 ######## zlib ########
-AC_ARG_ENABLE(zlib,
-   AC_HELP_STRING([--enable-zlib], [turn on zlib decompression support (default=enabled)]),
-   [
-      if test x$enableval == xyes ; then
-         zlib=true
-      else
-         zlib=false
-      fi
-   ],
-   [ zlib=true ]
-)
+AC_ARG_ENABLE(zlib, AC_HELP_STRING([--enable-zlib], [turn on zlib decompression support (default=enabled)]),
+   [ en_zlib=$enableval ], [ en_zlib=yes ])
 
-if test x$zlib == xtrue ; then
+if test x$en_zlib == xyes ; then
    AC_CHECK_HEADER([zlib.h], [], [ AC_MSG_ERROR([Could not find zlib header file]) ])
-   AC_CHECK_LIB([z], [deflate], [ enable_zlib=yes ], [ AC_MSG_ERROR([Could not find zlib library]) ] )
-fi
-if test x$enable_zlib == xyes ; then
+   AC_CHECK_LIB([z], [deflate], [], [ AC_MSG_ERROR([Could not find zlib library]) ] )
    AM_CONDITIONAL([HAVE_ZLIB], true)
    AC_DEFINE([HAVE_ZLIB], 1, [Support for zlib compression])
    AC_SUBST([ZLIB_LIBS], "-lz")
@@ -60,19 +38,10 @@ fi
 
 ######## Debugging ########
 AH_TEMPLATE([DEBUG], [Support for debugging.])
+AC_ARG_ENABLE(debug, AC_HELP_STRING([--enable-debug], [turn on debugging (default=disabled)]),
+   [ en_debug=$enableval ], [ en_debug=no ])
 
-AC_ARG_ENABLE(debug,
-   AC_HELP_STRING([--enable-debug], [turn on debugging (default=disabled)]),
-   [
-      if test x$enableval == xyes ; then
-         debug=true
-      else
-         debug=false
-      fi
-   ],
-   [ debug=false ]
-)
-if test x$debug == xtrue ; then
+if test x$en_debug == xyes ; then
    AM_CONDITIONAL([DEBUG], true)
    AC_DEFINE([DEBUG])
    CFLAGS="$CFLAGS -g -ggdb -W -Wall -Werror"
@@ -84,21 +53,9 @@ else
 fi
 
 ######## Tools ########
-AH_TEMPLATE([TOOLS], [Tools.])
-
-AC_ARG_ENABLE(tools,
-   AC_HELP_STRING([--enable-tools], [turn on tools (default=enabled)]),
-   [
-      if test x$enableval == xyes ; then
-         tools=true
-      else
-         tools=false
-      fi
-   ],
-   [ tools=true ]
-)
-AM_CONDITIONAL([TOOLS], test x$tools == xtrue)
-######## Add input files ########
+AC_ARG_ENABLE(tools, AC_HELP_STRING([--enable-tools], [turn on tools (default=enabled)]),
+   [ en_tools=$enableval ], [ en_tools=yes ])
+AM_CONDITIONAL([TOOLS], test x$en_tools == xyes)
 
 # REQUIRED_PKG_CONFIG can be used inside dsmcc.pc.in file
 AC_SUBST([REQUIRED_PKG_CONFIG], ${REQUIRED_PKG_CONFIG})
@@ -106,9 +63,9 @@ AC_CONFIG_FILES([ Makefile Doxyfile include/Makefile src/Makefile tools/Makefile
 
 ######## Summary of configured options  ########
 AC_MSG_NOTICE([***** Summary *****])
-AC_MSG_NOTICE([DSMCC DEBUG          : $debug])
-AC_MSG_NOTICE([DSMCC ZLIB           : $zlib])
-AC_MSG_NOTICE([DSMCC TOOLS          : $tools])
+AC_MSG_NOTICE([DSMCC DEBUG          : $en_debug])
+AC_MSG_NOTICE([DSMCC ZLIB           : $en_zlib])
+AC_MSG_NOTICE([DSMCC TOOLS          : $en_tools])
 
 AC_OUTPUT
 
